<resources>
    <string name="app_name">CruzRoja</string>
    <string name="title_activity_referencia">No se toca</string>
    <string name="title_card">Aplicación de RCP</string>
    <string name="subtitle_textCard_card">ellips</string>
    <string name="tab_home">Home</string>
    <string name="tab_voluntary">Voluntariado</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transicionName_picture">transicionnamepicture</string>
    <string name="Lesson1">Evaluación Inicial</string>
    <string name="L1T1"><b>¿Qué son Primeros Auxilios?</b></string>
    <string name="PrimerosAuxilios">Primeros Auxilios son los procedimientos y técnicas que se aplican para dar ayuda inmediata, temporal y eficaz a una persona que ha sido víctima de un accidente o enfermedad repentina, antes de ser atendida por personal más especializado.</string>
    <string name="preguntas"><b>¿Yo como primera respuesta frente a un accidente?</b>\n ¿ Qué debo saber?\n ¿Qué puedo hacer?\n ¿Qué no debo hacer?\n\n <b>Prioridades de atención:</b>\n 1-Mantener la calma\n 2-Activar la cadena de sobrevivencia\n 3-Evaluar seguridad de la escena\n 4-Cuidar nuestra seguridad\n\n
        <b>Cadena de sobrevivencia:</b>\n
        1-Reconocimiento inmediato y activación del sistema médico de emergencias (S.M.E.).\n
        2-Brindar cuidados básicos o reanimación cardiopulmonar temprana (RCP).\n
        3-Rápida desfibrilación.\n
        4-Soporte vital avanzado efectivo.\n
        5-Cuidados específicos en un centro hospitalario.\n\n
        <b>Cadena de la sobrevivencia pediátrica:</b>\n
        1.Prevenir.\n
        2.Soporte básico de vida (RCP precoz o RCP inmediata).\n
        3.Después de dos minutos continuos de RCP alerte al Sistema Médico de Emergencia.\n
        4.Soporte vital Avanzado.\n
        5.Cuidados post paro en un centro hospitalario.\n</string>
    <string name="equipoProteccion"><b>Equipo de protección personal:</b> \nGuantes \nLentes \nMascarilla \n</string>
    <string name="evaluacion">\n<b> Evaluación de la escena: </b> \n
        Fuentes de información para realizar la evaluación inicial:\n\n
        \t\t- La escena por sí misma.\n
        \t\t- El paciente, (verificar, si el paciente responde).\n
        \t\t- Cualquier familiar o curioso.\n
        \t\t- Cualquier deformidad notable, signo o síntoma.\n
        \t\t- Verificar si posee placa de aviso médico.\n</string>
    <string name="L1T2">Procedimiento para la evaluación inicial</string>
    <string name="procedimiento">
        \n<b>Presentación Personal: </b> \n
        \t\t-Identifíquese como persona entrenada en primeros auxilios.\n
        \t\t-Pregunte al paciente si puede ayudarlo.\n

        \n<b>Tipos de Consentimiento: </b> \n
        \t\t-Explícito\n
        \t\t-Implícito\n

        \n<b>Consentimiento Explícito: </b> \n
        Es el consentimiento que se adquiere directamente del paciente como autorización para recibir nuestra
        ayuda.\n
        \n<b>Consentimiento Implícito: </b> \n
        Este consentimiento se asume en personas que están en un estado de inconciencia, desorientación
        o no pueden tomar una decisión clara.\n

        \n <b> Evaluación Inicial o primaria:</b>\n
        Es el proceso que sirve para detectar y controlar los problemas que amenazan la vida del paciente a corto plazo.\n\n

        <b>Procedimiento para la evaluación inicial por orden de importancia:</b>\n
        1-Estado de conciencia\n
        2-Respiración\n
        3-Circulación\n
        4-Hemorragias\n</string>
    <string name="sem">\n<b>Active el Sistema de Emergencias Médicas (S.E.M.)</b>\n
        Cuando evalúe a un paciente, ya sea que esté consciente, inconsciente o su estado es grave, pida inmediatamente una ambulancia o indíquele a alguna de las personas presentes en el lugar que por favor la solicite.\n\n
        <b>Proceso para la evaluación inicial: </b>\n
        Para la ejecución de la evaluación inicial comenzaremos con el reconocimiento del:\n\n</string>
    <string name="L1T3">ABC de la vida</string>
    <string name="a">A-</string>
    <string name="St1T1">Abrir vías aéreas</string>
    <string name="a1">\n <b> Utilizando estas dos técnicas: </b> \n1- Extensión de la cabeza y elevación del mentón (persona no lesionada).</string>
    <string name="a2">\n 2- Empuje mandibular (esta técnica se utiliza en caso de que se sospeche de lesión o trauma cervical). </string>
    <string name="b">B-</string>
    <string name="St2T1">Buena Ventilación\n </string>
    <string name="b1"><b>M- </b> Mirar (EL tórax) \n<b>E- </b> Escuchar (La respiración) \n<b>S- </b> Sentir (La salida de aire) \n\n\n En un tiempo de 8 a 5 segundos.</string>
    <string name="c">C-</string>
    <string name="St3T1">Circulación \n </string>
    <string name="c1">Detección de pulso en la región de la arteria carótida durante 10 segundos.</string>
    <string name="hemorragias"><b>\n Detección de hemorragias:</b>\n\nDetectar cualquier hemorragia en una inspección realizada de cabeza a pies.</string>
    <string name="evaluacionI"><b>\n\nEvaluación Inicial:</b>\n\n
        En la evaluación inicial se debe de controlar todo problema que amenace la vida del paciente a corto plazo.
        En este programa corregimos cada problema que se encuentre para garantizar la vida del paciente.\n\n\n\n</string>
    <string name="Lesson2">Reanimación Cardiopulmonar (RCP)</string>
    <string name="L2T1"><b>Paro cardiorrespiratorio:</b></string>
    <string name="paroCar">Se manifiesta cuando el corazón y la respiración se detienen, puede presentarse
        súbitamente o por un periodo de respiración y circulación deficiente a causa de alguna enfermedad
        o trauma. \n\n La RCP es la combinación de dos métodos de reanimación:</string>
    <string name="L2T2">\n\n<b>Signos de un paro Cardiorrespiratorio y acciones inmediatas</b></string>
    <string name="L2T3">\n<b>Inconciencia</b></string>
    <string name="L2T4">Ausencia de respiración:</string>
    <string name="viaaerea"><b>A</b> = Abrir la vía aérea \n</string>
    <string name="ausenciaRespiracion">\n<b>B</b> = Ausencia de respiración:\n</string>
    <string name="MES"><b>M</b>iro \t <b>E</b>scucho \t <b>S</b>iento</string>
    <string name="AHA">\nLa Asociación Americana del Corazón (AHA por sus siglas en inglés), recomienda que si una persona está inconsciente, no respira y hay ausencia de pulso, hay que aplicar el método:</string>
    <string name="CAB"><b>C-A-B</b></string>
    <string name="ejecuciondelaManiobra"><b>Ejecución de la maniobra:</b>\nSi la persona está inconsciente, no tiene respiración y no tiene pulso, administre:\n \t<b>30 compresiones, 2 ventilaciones, durante 5 ciclos.</b></string>
    <string name="ManiobraRCP"><b>Maniobra de RCP con uno y dos reanimadores</b>\n  -Adulto 30 C. -2V. - 5C. \n  -Niño 30 C. -2V. -5C.</string>
    <string name="ManiobraRCPLactante"><b>Maniobra de RCP con uno y dos reanimadores –LACTANTE- </b>\nUn reanimador o Lactante \n\t  -30C. -2V. -5C. \nDos reanimadores o Lactante \n\t  -15C. -2V. -10 C.</string>
    <string name="PuntoDeCompresionAdulto"><b>Punto de compresión en adulto: </b>\nSi la persona no tiene respiración, apoye el talón de la mano, dos dedos por encima del apéndice xifoides o mitad inferior del esternón, para realizar compresiones torácicas.\n</string>
    <string name="compresionLactante"><b>Punto de compresión en Lactante: </b>\nSi el lactante no tiene respiración, apoye dos dedos al centro y debajo de la línea intermamaria, para realizar compresiones torácicas.\n</string>
    <string name="maniobraRCP2">\n\t -Profundidad de 6 cm. \n\t -Permita que se re- expanda el tórax. Con una frecuencia de 100 a 120 por minuto.</string>
    <string name="maniobraRCP3">\nUtilice únicamente el talón de la mano para hacer las compresiones torácicas.</string>
    <string name="posicionCorrectaTitle">\nPosición correcta:</string>
    <string name="ventilaciones"><b>Ventilaciones:</b>\n • Deben ser lentas y profundas que duren un (1) segundo, sellando las fosas nasales y utilizando un dispositivo que lo proteja.\n • Luego de dar la primera ventilación debe esperar un (1) segundo para que el aire ingresado salga.\n • La segunda ventilación será igual, con la diferencia que al finalizar deberá iniciar inmediatamente con las compresiones.</string>
    <string name="ManiobraInadecuadaTitle"><b>Maniobra inadecuada de Reanimación Cardiopulmonar (RCP):</b></string>
    <string name="ManiobraInadecuada">•El paciente no está sobre una superficie dura. \n•No se ejecuta una adecuada extensión de la cabeza - elevación mandibular. \n•Sello inadecuado sobre la boca del paciente. \n•Las fosas nasales del paciente no están oprimidas y la boca del paciente no está lo suficientemente abierta durante la ventilación boca a boca.</string>
    <string name="terminarRCP"><b>Cuando podemos terminar la Reanimación Cardiopulmonar (RCP): </b>\nUna vez iniciada la RCP debe mantenerse hasta que: \n\t1. Se inicia la respiración y pulso espontáneamente. \n\t2. Personal igual o más capacitado que usted lo releva. \n\t3. Usted se encuentra exhausto que ya no puede continuar con el procedimiento. \n\t4. Existe un médico que declare legalmente fallecida a la persona.</string>
    <string name="CuandoNoDarRCPTitle"><b>Cuando no dar Reanimación Cardiopulmonar:</b></string>
    <string name="CuandoNoDarRCP">•Cuando existen signos obvios de muerte: \n\t–Rigor Mortis (aparece después de 4 a 6 horas después de que una persona ha fallecido) Rigidez muscular característica de los cadáveres. \n\t– Manchas de Lividez (Alteración en la que aparece una coloración rojiza o azulada debido a la congestión venosa. \n\t– Decapitación. \n•Orden de NO RCP. (Documento médico-legal).</string>
    <string name="PosicionDeRecuperacionTitle"><b>Posición de Recuperación:</b></string>
    <string name="Lesson3">Maniobra de atragantamiento con compresiones abdominales</string>
    <string name="L3T1"><b>Atragantamiento:</b></string>
    <string name="atragantamiento">El atragantamiento se produce cuando un cuerpo extraño obstruye el paso de aire hacia los pulmones. El atragantamiento puede ser de dos tipos:</string>
    <string name="TiposAtragantamiento"><b>Parcial y total</b> \n<b>1. Parcial:</b> se manifiesta cuando el paso de aire está disminuido. \n<b>2. Total: </b>en la que no existe paso de aire.</string>
    <string name="Causas"><b>Causa de un atragantamiento: </b>\n-Obstrucción por la lengua. \n-Obstrucción por cuerpo extraño, (plásticos, comida, etc.).</string>
    <string name="Lesson4">Heridas y hemorragias</string>
    <string name="L4T1"><b>Hemorragias:</b></string>
    <string name="hemorragiasLesson4">Es la salida de sangre de sus canales naturales entre ellos podemos mencionar: \n\t• ARTERIAL \n\t• VENOSA \n\t• CAPILAR</string>
    <string name="ReconocimientoDeHemorragias"><b>Reconocimiento de tipos de hemorragias:</b></string>
    <string name="ReconocimientoDeHemorragiasText"><b>Arterial: </b>color rojo brillante, su salida es intermitente, rápida y abundante. \n<b>Venosa: </b>color opaca, sin brillo, su salida es continua. \n<b>Capilar: </b>sangre de intercambio, sin movimiento, parece sudoración.</string>
    <string name="ClasesDeHemorragiasTitle"><b>Clases de hemorragias:</b></string>
    <string name="ClasesDeHemorragias">Externa e interna Tipos de Heridas: \n\t1- Escoriación \n\t2- Cortante \n\t3- Contusa \n\t4- Punzante \nEquipo a utilizar para el control de las hemorragias: \n\t- Una manta limpia \n\t- Apósitos \n\t- Gasas \n\t- Vendas \n\t- Jabón \n\t- Agua</string>
    <string name="MetodoControlHemorragiasTitle"><b>Método para el control de las hemorragias:</b></string>
    <string name="MetodoControlHemorragias">Para este procedimiento aprenderemos el método P.E.P. \n<b>1. P</b>resión Directa \n<b>2- E</b>levación de extremidad (sin fracturas) \n<b>3- P</b>unto de presión \n\n\n</string>
</resources>