<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lotus.cruzroja.view.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbarlayout_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            >

            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@drawable/primerosauxilios"
                app:layout_collapseMode="parallax"
                android:transitionName="@string/transicionName_picture"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/Theme.AppCompat.Light"
                app:layout_collapseMode="pin"/>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/vertical_activity_padding">

            <TextView
                android:id="@+id/userNameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_TitleDetail"
                android:text="@string/Lesson1"
                android:paddingLeft="@dimen/horizontal_activity_padding"
                android:paddingRight="@dimen/vertical_activity_padding"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_divider"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_Title2"
                android:text="@string/L1T1"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PrimerosAuxilios"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"
                android:paddingRight="@dimen/horizontal_activity_padding"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/img1"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/l1img01"
                    />
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preguntas"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/equipoProteccion"
                    android:paddingBottom="@dimen/horizontal_activity_padding"
                    android:paddingLeft="@dimen/horizontal_activity_padding"/>
                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/equipoproteccion"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evaluacion"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_TitleDetail"
                android:text="@string/L1T2"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/procedimiento"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/estadoconciencia"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sem"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_TitleDetail"
                android:text="@string/L1T3"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize_TitleDetail"
                    android:text="@string/a"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/horizontal_activity_padding"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/St1T1"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a1"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/viasaeras"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a2"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/a2"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize_TitleDetail"
                    android:text="@string/b"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/horizontal_activity_padding"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/St2T1"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b1"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buenaventilacion"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize_TitleDetail"
                    android:text="@string/c"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/horizontal_activity_padding"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/St3T1"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c1"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circulacion"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hemorragias"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/hemorragia"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evaluacionI"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"
                android:paddingRight="@dimen/horizontal_activity_padding"/>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>