<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lotus.cruzroja.view.Lesson4Activity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbarlayout_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">

            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@drawable/lesson4picture"
                app:layout_collapseMode="parallax"
                android:transitionName="@string/transicionName_picture"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/Theme.AppCompat.Light"
                app:layout_collapseMode="pin"/>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/vertical_activity_padding">

            <TextView
                android:id="@+id/userNameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_TitleDetail"
                android:text="@string/Lesson4"
                android:paddingLeft="@dimen/horizontal_activity_padding"
                android:paddingRight="@dimen/vertical_activity_padding"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_divider"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_Title2"
                android:text="@string/L4T1"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hemorragiasLesson4"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_Title2"
                android:text="@string/ReconocimientoDeHemorragias"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ReconocimientoDeHemorragiasText"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ClasesDeHemorragiasTitle"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ClasesDeHemorragias"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MetodoControlHemorragiasTitle"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MetodoControlHemorragias"
                android:paddingBottom="@dimen/horizontal_activity_padding"
                android:paddingLeft="@dimen/horizontal_activity_padding"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>